corpus/cpp/scope_declaration/case-01/snapshots/gcc15/dual_sink_structured/render.concise.txt
error: [missing_name] 'missing_value' was not declared in this scope @ src/main.cpp:2:12
name: missing_value
use : return missing_value;
| src/main.cpp:2:12
|     return missing_value;
|            ^